--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <span>UI/UX</span>
                             </div>
                             
-                            <div>
+                            <div class="role-description">
                                 <span>FRONTEND/BACKEND DEVELOPMENT</span>
                             </div>
 
